# hoeffding_ineq_p

./: .gitignore  Cargo.toml  README.md  package-lock.json
src/: compare_theoretical.rs  hoeffding.rs  lib.rs  main.rs  polynominal.rs  polynominal2.rs
